# CTF-werkzeug-pin-crack

./: Dockerfile  challenge.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
challenge/: note.txt
solution/: get_pin.py  writeup.md
src/: main.py
src/templates/: index.html
