[tool.poetry]
name = "ctf-werkzeug-pin-crack"
version = "0.1.0"
description = "CTF reverse engineer PIN for werkzeug debug console"
authors = ["Stijn Kramer <stijn.kramer@scyon.nl>"]
readme = "README.md"
packages = [{include = "ctf_werkzeug_pin_crack"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
